[package]
name = "rust-crdt-talk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
itertools = "0.14.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
tracing-texray = "0.2.0"
uuid = { version = "1.15.1", features = ["rng", "serde", "v4"] }

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
